--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
+            <li class="navbar-text"><%= current_user.email %></li>
             <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
           <% end %>
         </ul>
