--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,9 +5,9 @@
 <table class="table table-bordered">
   <thead>
     <td width="5%">Id</td>
-    <td width="65%">Article</td>
+    <td width="55%">Article</td>
     <td width="10%">Category</td>
-    <td width="20%">Action</td>
+    <td width="30%">Action</td>
   </thead>
   <tbody>
     <% @articles.each do |article| %>
@@ -16,6 +16,7 @@
         <td><%= article.title %></td>
         <td><%= article.category.name %></td>
         <td>
+          <%= link_to "Comment", new_article_comment_path(article), class: "btn btn-success" %>
           <%= link_to "Show", article_path(article), class: "btn btn-primary" %>
           <%= link_to "Edit", edit_article_path(article,page: params[:page]), class: "btn btn-warning" %>
           <%= link_to "Delete", article_path(article),method: :delete, class: "btn btn-danger" %>
