--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -49,6 +49,7 @@
           </div>
         </div>
         <div class="pull-right">
+          <%= link_to "Back", articles_path, class: "btn btn-default" %>
         </div>
       </div>
     </div>
