--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,18 +1,20 @@
 <h1>Articles</h1>
+<hr>
 <div class="row">
-  <div class="col-sm-12">
-    <%= render partial: "form", locals:{article: @article,url: articles_path, methods: :post} %>
+  <div class="col-sm-4">
+    <% if params[:id] %>
+      <%= render partial: "form", locals:{article: @article,url: article_path(@article), methods: :put } %>
+    <% else %>
+      <%= render partial: "form", locals:{article: @article,url: articles_path, methods: :post } %>
+    <% end %>
   </div>
-</div>
-<br>
-<div class="row">
-  <div class="col-sm-12">
+  <div class="col-sm-8">
     <table class="table table-bordered">
       <thead>
       <td width="5%">Id</td>
-      <td width="65%">Article</td>
+      <td width="45%">Article</td>
       <td width="10%">Category</td>
-      <td width="20%">Action</td>
+      <td width="30%">Action</td>
       </thead>
       <tbody>
       <% @articles.each do |article| %>
@@ -22,7 +24,7 @@
           <td><%= article.category.name %></td>
           <td>
             <%= link_to "Show", article_path(article), class: "btn btn-primary" %>
-            <%= link_to "Edit", edit_article_path(article,page: params[:page]), class: "btn btn-warning" %>
+            <%= link_to "Edit", articles_path(id: article.id), class: "btn btn-warning" %>
             <%= link_to "Delete", article_path(article),method: :delete, class: "btn btn-danger" %>
           </td>
         </tr>
