--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -21,7 +21,7 @@
           </div>
           <div class="pull-right">
             <%= f.submit "Sign up", class: "btn btn-primary" %>
-            <%= link_to "Cancel", new_user_session_path, class: "btn btn-default" %>
+            <%= link_to "Cancel", articles_path, class: "btn btn-default" %>
           </div>
         <% end %>
       </div>
