--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -24,7 +24,7 @@
           <td><%= article.category.name %></td>
           <td>
             <%= link_to "Show", article_path(article), class: "btn btn-primary" %>
-            <%= link_to "Edit", articles_path(id: article.id), class: "btn btn-warning" %>
+            <%= link_to "View", articles_path(id: article.id), class: "btn btn-warning" %>
             <%= link_to "Delete", article_path(article),method: :delete, class: "btn btn-danger" %>
           </td>
         </tr>
