--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,9 @@
           <% if user_signed_in? %>
             <li class="navbar-text"><%= current_user.email %></li>
             <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+          <% else %>
+            <li><%= link_to "Login", new_user_session_path %></li>
+            <li><%= link_to "Signup", new_user_registration_path %></li>
           <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
